# Kokoro-FastAPI

./: .coverage  .coveragerc  .dockerignore  .gitattributes  .gitignore  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  MigrationWorkingNotes.md  README.md  README_UV.md  Test copy.py  Test.py  VERSION  debug.http  docker-bake.hcl  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  slim.report.json  start-cpu.ps1  start-cpu.sh  start-gpu.bat  start-gpu.ps1  start-gpu.sh  start-gpu_mac.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-push.yml  ci.yml  docker-publish.yml  release.yml  sync-develop.yml
api/: __init__.py
api/depr_tests/: test_endpoints.py  test_main.py  test_managers.py  test_text_processing.py  test_tts_service.py
api/src/: main.py
api/src/builds/: istftnet.py  kokoro.py  models.py  plbert.py
api/src/core/: config.py  don_quixote.txt  kokoro.py  model_config.py  openai_mappings.json  paths.py
api/src/database/: __init__.py  database.py  models.py  queue.py
api/src/inference/: __init__.py  base.py  kokoro_v1.py  model_manager.py  onnx_cpu.py  onnx_gpu.py  pytorch_backend.py  pytorch_cpu.py  pytorch_gpu.py  session_pool.py  voice_manager.py
api/src/models/: __init__.py  schemas.py
api/src/routers/: __init__.py  debug.py  development.py  openai_compatible.py  text_processing.py  tts.py  web_player.py
api/src/services/: __init__.py  audio.py  streaming_audio_writer.py  temp_manager.py  tts.py  tts_base.py  tts_cpu.py  tts_gpu.py  tts_model.py  tts_service.py  warmup.py
api/src/structures/: __init__.py  custom_responses.py  model_schemas.py  schemas.py  text_schemas.py
api/tests/: __init__.py  conftest.py  debug.http  test_audio_service.py  test_chunker.py  test_development.py  test_endpoints.py  test_kokoro_v1.py  test_main.py  test_normalizer.py  test_openai_endpoints.py  test_paths.py  test_text_processing.py  test_text_processor.py  test_tts_implementations.py  test_tts_service.py  test_tts_service_new.py  test_voice_manager.py
api/tests/test_data/: generate_test_data.py  test_audio.npy
charts/kokoro-fastapi/: Chart.yaml  aks-tls-values.yaml  values.yaml
charts/kokoro-fastapi/examples/: aks-tls-values.yaml  gpu-operator-values.yaml
charts/kokoro-fastapi/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  kokoro-tts-deployment.yaml  kokoro-tts-service.yaml  serviceaccount.yaml
dev/: Test Phon.py  Test Threads.py  Test copy 2.py  Test copy.py  Test money.py  Test num.py  Test.py
docker/: build.sh
docker/cpu/: .dockerignore  Dockerfile  docker-compose.yml  download_onnx.py  download_onnx.sh  pyproject.toml
docker/gpu/: .dockerignore  Dockerfile  docker-compose.yml  download_pth.py  download_pth.sh  pyproject.toml
docker/scripts/: download_model.py  download_model.sh  entrypoint.sh
docker/shared/: pyproject.toml
docs/: requirements.in  requirements.txt
docs/architecture/: espeak_setup_fix.md  kokoro_v1_integration.md  nlp_dependencies.md  streaming_audio_writer_analysis.md
examples/: benchmark_results.json  benchmark_tts.py  captioned_speech_example.py  openai_streaming_audio.py  plot_benchmark_style.py  requirements.txt  simul_file_test.py  simul_openai_streaming_audio.py  simul_speaker_test.py  stream_tts_playback.py  test_all_voices.py  test_analyze_combined_voices.py  test_combine_voices.py  test_openai_tts.py  test_tts.py  the_time_machine_hg_wells.txt
examples/assorted_checks/: generate_readme_plots.py  test_normalizer.py  validate_wav.py  validate_wavs.py
examples/assorted_checks/benchmarks/: benchmark_first_token.py  benchmark_first_token_stream.py  benchmark_first_token_stream_openai.py  benchmark_first_token_stream_unified.py  benchmark_tts_rtf.py  depr_benchmark_tts.py
examples/assorted_checks/test_combinations/: test_analyze_combined_voices.py  test_download_voice.py
examples/assorted_checks/test_formats/: test_audio_formats.py
examples/assorted_checks/test_openai/: test_openai_tts.py
examples/assorted_checks/test_voices/: analyze_voice_dimensions.py  test_all_voices.py  trim_voice_dimensions.py
examples/benchmarks/: benchmark_results.json  benchmark_stats.txt  benchmark_tts.py  benchmark_tts_rtf.py  the_time_machine_hg_wells.txt
examples/phoneme_examples/: generate_phonemes.py  test_phoneme_generation.py
examples/streaming_refactor/: benchmark_unified_streaming.py  test_unified_streaming.py
peaks/: output.mp3.reapeaks
readme-parts/: config.yaml
scripts/: fix_misaki.py  update_badges.py  update_version.py
ui/: Dockerfile  app.py
ui/data/inputs/: test_timemachine.txt
ui/depr_tests/: conftest.py  test_api.py  test_components.py  test_files.py  test_handlers.py  test_interface.py
ui/lib/: api.py  config.py  files.py  handlers.py  interface.py
ui/lib/components/: __init__.py  input.py  model.py  output.py
ui/tests/: conftest.py  test_api.py  test_components.py  test_files.py  test_input.py  test_interface.py
web/: app.js  index.html  siriwave.js  styles-clean.css  styles.css
web/src/: App.js
web/src/components/: PlayerControls.js  (+3 more)
web/styles/: badges.css  base.css  controls.css  forms.css  header.css  layout.css  player.css  responsive.css
(+45 files in other folders)
