[project]
name = "kokoro-fastapi-cpu"
version = "0.1.0"
description = "FastAPI TTS Service - CPU Version"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/DL for CPU
    "torch>=2.5.1",
    "transformers==4.47.1",
]

[tool.uv.workspace]
members = ["../shared"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
